# Modmail

./: .bandit_baseline.json  .dockerignore  .env  .env.example  .gitignore  .lint.py  .pylintrc  .replit  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  Pipfile  Procfile  README.md  SPONSORS.json  alembic.ini  app.json  app.py  bot.py  confg.json.example  config.json  config.json.example  docker-compose.yml  guide.md  keep_alive.py  modmail.sh  paginator.py  pyproject.toml  requirements.min.txt  requirements.txt  requirements.txt.min  runtime.txt  translation_files copy.py  translation_files.py  win-requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  pull.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  command-request.md  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build_and_push.yml  build_docker.yml  docker-image.yml  lints.yml  modmailworkflow.yml  stale.yml
cogs/: migrate.py  modmail.py  plugins.py  stat.py  threadmenu.py  utility.py
core/: _color_data.py  api.py  changelog.py  checks.py  clients.py  config.py  config_help.json  decorators.py  interfaces.py  models.py  objects.py  paginator.py  thread.py  time.py  translations.py  utils.py
docs/: index.html
ext/: formatter.py
languages/: en.csv
migrations/: env.py
migrations/versions/: ed42f95bfa77_initial_create.py
plugins/: .gitignore  registry.json
temp/: .gitignore
utils/: api.py  github.py  modmail.py  paginator.py
